Tue Apr 26 13:04:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocation_Resolver.h:
        * tao/Connect_Strategy.h:
        * tao/Endpoint_Selector_Factory.h:
        * tao/GIOP_Message_Base.h:
        * tao/GIOP_Message_Generator_Parser.h:
        * tao/GIOP_Message_Generator_Parser_10.h:
        * tao/GIOP_Message_Generator_Parser_11.h:
        * tao/GIOP_Message_Generator_Parser_Impl.h:
        * tao/GIOP_Message_State.h:
        * tao/GIOP_Utils.h:
        * tao/GUIResource_Factory.h:
        * tao/LF_Connect_Strategy.h:
        * tao/LF_Follower.cpp:
          Doxygen changes

Tue Apr 26 12:50:24 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * tao/Thread_Lane_Resources.h:
        * tao/Thread_Lane_Resources_Manager.h:
        * tao/Thread_Per_Connection_Handler.h:
        * tao/Transport.h:
        * tao/Transport_Connector.h:
        * tao/TypeCodeFactory_Adapter.h:
          Doxygen changes

Tue Apr 26 12:21:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Acceptor_Impl.h:
        * tao/Acceptor_Impl.cpp:
        * tao/Acceptor_Registry.h:
        * tao/Adapter_Registry.h:
        * tao/Bind_Dispatcher_Guard.h:
        * tao/Blocked_Connect_Strategy.h:
        * tao/Blocked_Connect_Strategy.cpp:
        * tao/Cleanup_Func_Registry.h:
        * tao/Collocated_Invocation.cpp:
        * tao/LF_Event_Loop_Thread_Helper.inl:
        * tao/LF_Follower_Auto_Adder.inl:
        * tao/Leader_Follower.cpp:
        * tao/Queued_Message.h:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Wait_On_LF_No_Upcall.h:
        * tao/Wait_On_LF_No_Upcall.cpp:
        * tao/Wait_On_Reactor.h:
        * tao/Wait_On_Read.h:
          Doxygen changes

Tue Apr 26 11:57:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Leader_Follower.h:
        * tao/Leader_Follower.inl:
        * tao/Wait_On_LF_No_Upcall.h:
        * tao/Wait_On_Leader_Follower.h: